Added beginning of CAML query to retrieve tasks.

--- a/RESTMVCWeb/Views/Home/Index.cshtml
+++ b/RESTMVCWeb/Views/Home/Index.cshtml
@@ -10,6 +10,6 @@
     <tbody>
         <tr><td>Host Web</td><td>@ViewBag.hostTitle</td></tr>
         <tr><td>App Web</td><td>@ViewBag.appTitle</td></tr>
+        <tr><td>User Token</td><td>@ViewBag.accessToken</td></tr>
     </tbody>
 </table>
-
