--- a/RESTMVCWeb/Views/Home/Index.cshtml
+++ b/RESTMVCWeb/Views/Home/Index.cshtml
@@ -1,6 +1,10 @@
 ﻿@{
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = "Index";
 }
+
+<p></p>
+<p>Hello, my name is <b>@ViewBag.Message</b> I am the Project Context.</p>
+
 
 <table class="stripe">
     <thead>
@@ -10,6 +14,5 @@
     <tbody>
         <tr><td>Host Web</td><td>@ViewBag.hostTitle</td></tr>
         <tr><td>App Web</td><td>@ViewBag.appTitle</td></tr>
-
     </tbody>
 </table>
